ingress/book-ingress-2-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-service-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /productpage
        pathType: Prefix
        backend:
          service:
            name: productpage
            port:
              number: 9080
      - path: /livrepage
        pathType: Prefix
        backend:
          service:
            name: livrepage
            port:
              number: 9080
