ingress/bookinfo-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookinfo-ingress
  namespace: default
spec:
  ingressClassName: nginx 
  tls:
  - hosts:
    - bookinfo.kube.local # ⬅️ Ton nom de domaine pour lequel le certificat est valide
    secretName: bookinfo-tls # ⬅️ Le nom du Secret TLS que tu viens de créer
  rules:
  - http: 
      paths:
      - path: /productpage
        pathType: Prefix
        backend:
          service:
            name: productpage
            port:
              number: 9080
